add postcss-loder file-loader

--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,12 @@
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   flex-direction: column;
+  background-image: url('../asset/redpacket.png')
+}
+.comein{
+  background-image: url('../asset/comein.png')
+}
+.redpacket{
+  background-image: url('../asset/redpacket.png')
+
 }
